--- a/pages/about.html
+++ b/pages/about.html
@@ -2,12 +2,16 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<title>RaveArmor</title>
+		<title>RaveArmor - About Us</title>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?display=swap&family=Audiowide&family=UnifrakturCook:wght@700&family=Philosopher" />
     <link rel="stylesheet" href="/css/common.css" />
+    <link rel="stylesheet" href="/css/navbar.css" />
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
+		<div id="navbar"></div>
+		<script src="/js/navbar.js"></script>
 		<div id="root"></div>
+		<script src="/js/about.js"></script>
 	</body>
 </html>
