Added header shadow, footer, and favicon

--- a/pages/masks.html
+++ b/pages/masks.html
@@ -3,9 +3,22 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>RaveArmor</title>
+		<link rel="icon" type="image/png" href="/images/icons/favicon_32.png" sizes="32x32">
+		<link rel="icon" type="image/png" href="/images/icons/favicon_57.png" sizes="57x57">
+		<link rel="icon" type="image/png" href="/images/icons/favicon_60.png" sizes="60x60">
+		<link rel="icon" type="image/png" href="/images/icons/favicon_64.png" sizes="64x64">
+		<link rel="icon" type="image/png" href="/images/icons/favicon_72.png" sizes="72x72">
+		<link rel="icon" type="image/png" href="/images/icons/favicon_76.png" sizes="76x76">
+		<link rel="icon" type="image/png" href="/images/icons/favicon_114.png" sizes="114x114">
+		<link rel="icon" type="image/png" href="/images/icons/favicon_120.png" sizes="120x120">
+		<link rel="icon" type="image/png" href="/images/icons/favicon_128.png" sizes="128x128">
+		<link rel="icon" type="image/png" href="/images/icons/favicon_144.png" sizes="144x144">
+		<link rel="icon" type="image/png" href="/images/icons/favicon_152.png" sizes="152x152">
+		<link rel="icon" type="image/png" href="/images/icons/favicon_196.png" sizes="196x196">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?display=swap&family=Audiowide&family=UnifrakturCook:wght@700&family=Philosopher" />
     <link rel="stylesheet" href="/css/common.css" />
     <link rel="stylesheet" href="/css/navbar.css" />
+    <link rel="stylesheet" href="/css/footer.css" />
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
@@ -13,5 +26,7 @@
 		<script src="/js/navbar.js"></script>
 		<div id="root"></div>
 		<script src="/js/masks.js"></script>
+		<div id="footer"></div>
+		<script src="/js/footer.js"></script>
 	</body>
 </html>
