Add Material-UI and tweak pages, titles, etc.

--- a/pages/about.html
+++ b/pages/about.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>RaveArmor - About Us</title>
+    <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width" />
 		<link rel="icon" type="image/png" href="/images/icons/favicon_32.png" sizes="32x32">
 		<link rel="icon" type="image/png" href="/images/icons/favicon_57.png" sizes="57x57">
 		<link rel="icon" type="image/png" href="/images/icons/favicon_60.png" sizes="60x60">
