--- a/pages/home.html
+++ b/pages/home.html
@@ -2,7 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<title>RaveArmor</title>
+		<title>RaveArmor - Home</title>
+    <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width" />
 		<link rel="icon" type="image/png" href="/images/icons/favicon_32.png" sizes="32x32">
 		<link rel="icon" type="image/png" href="/images/icons/favicon_57.png" sizes="57x57">
 		<link rel="icon" type="image/png" href="/images/icons/favicon_60.png" sizes="60x60">
